# Rust-QuantTrader

./: .gitignore  Cargo.toml  README.md  fetch_test_data.sh
backtester/: Cargo.toml
backtester/src/: lib.rs  mod.rs
backtester/src/backtrader/: asset_data.rs  backtrader.rs  exchange.rs  mod.rs
backtester/src/data/: csv.rs  data.rs  mod.rs
backtester/src/performance/: mod.rs  performance.rs
backtester/src/strategy/: strategy.rs
backtester/tests/: backtrader.rs
data/: Cargo.toml
data/src/: coingecko.rs  livecoinwatch.rs  main.rs
grid_trader/: Cargo.toml
grid_trader/src/: grid.rs  main.rs
strategies/: Cargo.toml
strategies/src/: main.rs
trader/: Cargo.toml
trader/src/: main.rs
