[workspace]
resolver = "2"
members = [
    "backtester",
    "data",
    "data",
    "grid_trader",
    "strategies",
    "trader"
]

[workspace.package]
name = "Quant-Trader"
authors = ["Alexander Høgh"]
edition = "2021"
homepage = ""
repository = "https://github.com/rpcpool/yellowstone-grpc"
license = "Private"
keywords = ["solana"]
version = "0.1.0"
readme = "README.md"
categories = ["science", "algorithms"]
publish = false

[workspace.dependencies]
tokio = { version = "1.4.0", features = ["full"] }
dotenv = "0.15.0"
chrono = "0.4.38"
reqwest = {version = "0.12.4", features = ["json"]}
serde_json = "1.0.133"
rand = "0.7.3"
clap = { version = "4.5.19", features = ["derive"] }
Backtester = { path = "backtester" }
polars = { version = "0.45.1", features = ["lazy", "csv", "rolling_window", "rolling_window_by", "temporal", "dtype-datetime", "polars-time", "dtype-time"]}


[workspace.lints.clippy]
clone_on_ref_ptr = "deny"
missing_const_for_fn = "deny"
trivially_copy_pass_by_ref = "deny"

[profile.release]
lto = true
codegen-units = 1
