[package]
name = "Backtester"
authors.workspace = true
edition.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
version.workspace = true
readme.workspace = true
categories.workspace = true
publish.workspace = true

[dependencies]
polars = { workspace = true, features = ["lazy", "csv", "rolling_window", "rolling_window_by", "temporal", "dtype-datetime", "polars-time", "dtype-time"]}
serde_json = { workspace = true }

[lints]
workspace = true
