[package]
name = "Data"
authors.workspace = true
edition.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
version.workspace = true
readme.workspace = true
categories.workspace = true
publish.workspace = true

[dependencies]
reqwest = "0.12.9"
serde = { version = "1.0.215", features = ["derive"] }
log = "0.4.22"
serde_json = "1.0.133"
polars = { version = "x", features = ["lazy", "csv"]}
csv = "1.3.1"

[lints]
workspace = true
